<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11182C"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#7D92D5"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="320dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddNew"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:onClick="changeScreen"
            android:text="@string/button_pridat"
            android:textColor="#11182C"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOverview"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:onClick="changeScreen"
            android:text="@string/button_prehled"
            android:textColor="#11182C"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddNew"
            app:layout_constraintVertical_bias="0.085" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLimits"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:onClick="changeScreen"
            android:text="@string/button_limit"
            android:textColor="#11182C"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOverview"
            app:layout_constraintVertical_bias="0.109" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSpendings"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:onClick="changeScreen"
            android:text="@string/button_utraty"
            android:textColor="#11182C"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLimits"
            app:layout_constraintVertical_bias="0.151" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>